--- a/client/public/index.html
+++ b/client/public/index.html
@@ -16,7 +16,7 @@
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <style>
-      @import url('https://fonts.googleapis.com/css2?family=Raleway:wght@100&display=swap');
+      @import url("https://fonts.googleapis.com/css2?family=Raleway:wght@100&display=swap");
     </style>
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
